--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<script src="http://code.jquery.com/jquery-2.2.1.min.js"></script>
+	<script src="https://code.jquery.com/jquery-2.2.1.min.js"></script>
 	<script>
-		$(document).ready(function () {
+	  $(document).ready(function () {
 	  $(window).load(function(){
 	  $(".preloader").delay(3000).fadeOut();
 	 });
