changes to team section hover animation

--- a/index.html
+++ b/index.html
@@ -143,30 +143,120 @@
 		</div>
 
 		<div class="box-container">
-			<div class="box">
-				<img src="images/dummy.png">
-				<h3>AryaP</h3>
-			</div>
-			<div class="box">
-				<img src="images/dummy.png">
-				<h3>doriLele</h3>
-			</div>
-			<div class="box">
-				<img src="images/dummy.png">
-				<h3>Magus</h3>
-			</div>
-			<div class="box">
-				<img src="images/dummy.png">
-				<h3>Orlyn</h3>
-			</div>
-			<div class="box">
-				<img src="images/dummy.png">
-				<h3>Harry76</h3>
-			</div>
-			<div class="box">
-				<img src="images/dummy.png">
-				<h3>Reimei5</h3>
-			</div>
+			<div class="card-wrapper">
+				<div class="card">
+			    <div class="front">
+			    	<img src="images/dummy.png" alt="Avatar">
+			    </div>
+			    <div class="back">
+						 <div class="social-icons">
+						   <p>AryaP</p>
+						   <br>
+							 <i class="fa-brands fa-instagram fa-2xl"></i>
+							 <i class="fa-brands fa-twitch fa-2xl"></i>
+							 <i class="fa-brands fa-facebook fa-2xl"></i>
+							 <i class="fa-brands fa-twitter fa-2xl"></i>
+							 <i class="fa-brands fa-discord fa-2xl"></i>
+						</div>
+			    </div>
+			  </div>
+		  </div>
+
+			<div class="card-wrapper">
+				<div class="card">
+			    <div class="front">
+			    	<img src="images/dummy.png" alt="Avatar">
+			    </div>
+			    <div class="back">
+						 <div class="social-icons">
+						   <p>doriLele</p>
+						   <br>
+							 <i class="fa-brands fa-instagram fa-2xl"></i>
+							 <i class="fa-brands fa-twitch fa-2xl"></i>
+							 <i class="fa-brands fa-facebook fa-2xl"></i>
+							 <i class="fa-brands fa-twitter fa-2xl"></i>
+							 <i class="fa-brands fa-discord fa-2xl"></i>
+						</div>
+			    </div>
+			  </div>
+		  </div>
+		  
+			<div class="card-wrapper">
+				<div class="card">
+			    <div class="front">
+			    	<img src="images/dummy.png" alt="Avatar">
+			    </div>
+			    <div class="back">
+						 <div class="social-icons">
+						   <p>Magus</p>
+						   <br>
+							 <i class="fa-brands fa-instagram fa-2xl"></i>
+							 <i class="fa-brands fa-twitch fa-2xl"></i>
+							 <i class="fa-brands fa-facebook fa-2xl"></i>
+							 <i class="fa-brands fa-twitter fa-2xl"></i>
+							 <i class="fa-brands fa-discord fa-2xl"></i>
+						</div>
+			    </div>
+			  </div>
+		  </div>
+
+			<div class="card-wrapper">
+				<div class="card">
+			    <div class="front">
+			    	<img src="images/dummy.png" alt="Avatar">
+			    </div>
+			    <div class="back">
+						 <div class="social-icons">
+						   <p>Orlyn</p>
+						   <br>
+							 <i class="fa-brands fa-instagram fa-2xl"></i>
+							 <i class="fa-brands fa-twitch fa-2xl"></i>
+							 <i class="fa-brands fa-facebook fa-2xl"></i>
+							 <i class="fa-brands fa-twitter fa-2xl"></i>
+							 <i class="fa-brands fa-discord fa-2xl"></i>
+						</div>
+			    </div>
+			  </div>
+		  </div>
+
+			<div class="card-wrapper">
+				<div class="card">
+			    <div class="front">
+			    	<img src="images/dummy.png" alt="Avatar">
+			    </div>
+			    <div class="back">
+						 <div class="social-icons">
+						   <p>Harry76</p>
+						   <br>
+							 <i class="fa-brands fa-instagram fa-2xl"></i>
+							 <i class="fa-brands fa-twitch fa-2xl"></i>
+							 <i class="fa-brands fa-facebook fa-2xl"></i>
+							 <i class="fa-brands fa-twitter fa-2xl"></i>
+							 <i class="fa-brands fa-discord fa-2xl"></i>
+						</div>
+			    </div>
+			  </div>
+		  </div>
+
+			<div class="card-wrapper">
+				<div class="card">
+			    <div class="front">
+			    	<img src="images/dummy.png" alt="Avatar">
+			    </div>
+			    <div class="back">
+						 <div class="social-icons">
+						   <p>Reime5</p>
+						   <br>
+							 <i class="fa-brands fa-instagram fa-2xl"></i>
+							 <i class="fa-brands fa-twitch fa-2xl"></i>
+							 <i class="fa-brands fa-facebook fa-2xl"></i>
+							 <i class="fa-brands fa-twitter fa-2xl"></i>
+							 <i class="fa-brands fa-discord fa-2xl"></i>
+						</div>
+			    </div>
+			  </div>
+		  </div>
+
 		</div>
 	</div>
 </section>
@@ -230,10 +320,7 @@
 </div>
 <!-- footer section ends -->
 
-
-
 <!-- custom js file -->
-
 <script src="js/script.js"></script>
 <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 <script>
