changes to footer logo

--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html>
 <head>
 	<script src="https://code.jquery.com/jquery-2.2.1.min.js"></script>
-	<script>
+	<!-- <script>
 	  $(document).ready(function () {
 	  $(window).load(function(){
 	  $(".preloader").delay(3000).fadeOut();
 	 });
 	});
-	</script>
+	</script> -->
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Ten2One</title>
@@ -22,12 +22,12 @@
 	<link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
 <body>
-<div class="preloader">
+<!-- <div class="preloader">
   <div class="loading">
     <img src="images/loading.gif" width="150">
     <p>Please Wait</p>
   </div>
-</div>
+</div> -->
 <!-- header section -->
 <header class="header">
 	<div class="nav-bg">
@@ -289,26 +289,26 @@
 <section class="footer">
 	<div class="box-container">
 		<div class="box">
-			<i class="fas fa-envelope"></i>
+			<img src="images/mail.png" style="height: 6.1rem;">
 			<h3>Our Email</h3>
 			<p>example@exam.com</p>
 			<p>example2@exam.com</p>
 		</div>
 
 		<div class="box">
-			<i class="fab fa-discord"></i>
+			<img src="images/discord.png" style="height: 6.1rem;">
 			<h3>Our Discord</h3>
 			<p>example_discord.link</p>
 		</div>
 
 		<div class="box">
-			<i class="fa-brands fa-twitch"></i>
+			<img src="images/twitch.png" style="height: 6.1rem;">
 			<h3>Our Twitch Channel</h3>
 			<p>example_twitch.link</p>
 		</div>
 
 		<div class="box">
-			<i class="fas fa-phone"></i>
+			<img src="images/number.png" style="height: 6.1rem;">
 			<h3>Our Number</h3>
 			<p>+123-456-789</p>
 			<p>+122-344-556</p>
