--- a/index.html
+++ b/index.html
@@ -289,26 +289,26 @@
 <section class="footer">
 	<div class="box-container">
 		<div class="box">
-			<img src="images/mail.png" style="height: 6.1rem;">
+			<img src="images/mail.png">
 			<h3>Our Email</h3>
 			<p>example@exam.com</p>
 			<p>example2@exam.com</p>
 		</div>
 
 		<div class="box">
-			<img src="images/discord.png" style="height: 6.1rem;">
+			<img src="images/discord.png">
 			<h3>Our Discord</h3>
 			<p>example_discord.link</p>
 		</div>
 
 		<div class="box">
-			<img src="images/twitch.png" style="height: 6.1rem;">
+			<img src="images/twitch.png">
 			<h3>Our Twitch Channel</h3>
 			<p>example_twitch.link</p>
 		</div>
 
 		<div class="box">
-			<img src="images/number.png" style="height: 6.1rem;">
+			<img src="images/number.png">
 			<h3>Our Number</h3>
 			<p>+123-456-789</p>
 			<p>+122-344-556</p>
