--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html>
 <head>
 	<script src="https://code.jquery.com/jquery-2.2.1.min.js"></script>
-	<!-- <script>
+	<script>
 	  $(document).ready(function () {
 	  $(window).load(function(){
 	  $(".preloader").delay(3000).fadeOut();
 	 });
 	});
-	</script> -->
+	</script>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Ten2One</title>
@@ -22,12 +22,12 @@
 	<link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
 <body>
-<!-- <div class="preloader">
+<div class="preloader">
   <div class="loading">
     <img src="images/loading.gif" width="150">
     <p>Please Wait</p>
   </div>
-</div> -->
+</div>
 <!-- header section -->
 <header class="header">
 	<div class="nav-bg">
