adding message input box

--- a/index.html
+++ b/index.html
@@ -58,7 +58,8 @@
 				<article class="content">
 					<h3>Founder's Profile</h3>
 					<p>Ferdy Apriliyanto was the originator of the idea for the formation of this team several years
-						ago. currently he is in college and has entered the second semester. Ferdy has started studying coding for
+						ago. currently he is in college and has entered the second semester. Ferdy has started studying
+						coding for
 						the first time since entering vocational school. he also has another hobby, which is playing
 						games, usually he plays FPS themed games and sometimes holds live streaming via the famous
 						platform Twitch.</p>
@@ -287,21 +288,20 @@
 					<img src="images/contact.png">
 					<h3>Contact Us</h3>
 				</div>
-
 				<div class="row">
 					<div class="image">
 						<img src="images/contact_us.png">
 					</div>
-
 					<form action="https://formsubmit.co/ferdywebhost1@gmail.com" method="post">
 						<h3>Feel Free to Contact Us!</h3>
 						<input type="text" name="name" required class="box" maxlength="20"
 							placeholder="Enter Your Name">
-						<input type="number" name="number" required class="box" maxlength="20"
-							placeholder="Enter Your Number" min="0" max="999999999999"
-							onkeypress="if (this.value.length == 12) return false">
-
-						<input type="submit" name="send" value="send message" class="btn">
+						<input type="text" name="email" required class="box" maxlength="15"
+							placeholder="Enter Your Email">
+						<input type="text" name="message" required class="box" maxlength="50"
+							placeholder="Enter Your Message">
+						<input type="submit" name="send" class="btn">
+						<input type="hidden" name="_next" value="https://https://ferdyapriliyanto.github.io//index.html">
 					</form>
 				</div>
 			</section>
