removing email max length

--- a/index.html
+++ b/index.html
@@ -296,12 +296,12 @@
 						<h3>Feel Free to Contact Us!</h3>
 						<input type="text" name="name" required class="box" maxlength="20"
 							placeholder="Enter Your Name">
-						<input type="text" name="email" required class="box" maxlength="15"
-							placeholder="Enter Your Email">
+						<input type="text" name="email" required class="box" placeholder="Enter Your Email">
 						<input type="text" name="message" required class="box" maxlength="50"
 							placeholder="Enter Your Message">
 						<input type="submit" name="send" class="btn">
-						<input type="hidden" name="_next" value="https://https://ferdyapriliyanto.github.io//index.html">
+						<input type="hidden" name="_next"
+							value="https://https://ferdyapriliyanto.github.io//index.html">
 					</form>
 				</div>
 			</section>
