--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@
 							placeholder="Enter Your Message">
 						<input type="submit" name="send" class="btn">
 						<input type="hidden" name="_next"
-							value="https://https://ferdyapriliyanto.github.io//index.html">
+							value="https://ferdyapriliyanto.github.io/">
 					</form>
 				</div>
 			</section>
