--- a/index.html
+++ b/index.html
@@ -300,8 +300,8 @@
 						<input type="text" name="message" required class="box" maxlength="50"
 							placeholder="Enter Your Message">
 						<input type="submit" name="send" class="btn">
-						<input type="hidden" name="_next"
-							value="https://ferdyapriliyanto.github.io/">
+						<input type="hidden" name="_next" value="https://ferdyapriliyanto.github.io/">
+						<input type="hidden" name="_autoresponse" value="Thanks for your message!">
 					</form>
 				</div>
 			</section>
