--- a/index.html
+++ b/index.html
@@ -296,12 +296,12 @@
 						<h3>Feel Free to Contact Us!</h3>
 						<input type="text" name="name" required class="box" maxlength="20"
 							placeholder="Enter Your Name">
-						<input type="text" name="email" required class="box" placeholder="Enter Your Email">
+						<input type="email" name="email" required class="box" placeholder="Enter Your Email Address">
+						<input type="hidden" name="_autoresponse" value="Thanks for your message!">
 						<input type="text" name="message" required class="box" maxlength="50"
 							placeholder="Enter Your Message">
 						<input type="submit" name="send" class="btn">
 						<input type="hidden" name="_next" value="https://ferdyapriliyanto.github.io/">
-						<input type="hidden" name="_autoresponse" value="Thanks for your message!">
 					</form>
 				</div>
 			</section>
