--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@
 							<div class="box">
 								<img src="images/mail.png">
 								<h3>Our Email</h3>
-								<p>ferdya7414@gmail.com</p>
+								<p>ferdywebhost1@gmail.com</p>
 							</div>
 
 							<div class="box">
