reconfigure send message button

--- a/index.html
+++ b/index.html
@@ -300,7 +300,7 @@
 						<input type="hidden" name="_autoresponse" value="Thanks for your message!">
 						<input type="text" name="message" required class="box" maxlength="50"
 							placeholder="Enter Your Message">
-						<input type="submit" name="send" class="btn">
+						<button type="submit" name="send" class="btn">Send Message</button>
 						<input type="hidden" name="_next" value="https://ferdyapriliyanto.github.io/">
 					</form>
 				</div>
