--- a/index.html
+++ b/index.html
@@ -11,33 +11,33 @@
 	<!-- font awesome cdn -->
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
 
-	<!-- custom css file -->
+	<!-- custom css files -->
 	<link rel="stylesheet" href="css/style.css">
 	<link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
 
 <body>
+	<!-- header section -->
+	<header class="header">
+		<div class="nav-bg">
+			<section class="flex">
+				<a href="#home" class="logo"><img src="images/Ten2One_navbar_resize.png"></a>
+
+				<nav class="navbar">
+					<a href="#home">Home</a>
+					<a href="#about">About</a>
+					<a href="#gallery">Gallery</a>
+					<a href="#team">Team</a>
+					<a href="#contact">Contact</a>
+				</nav>
+
+				<div id="menu-btn" class="fas fa-bars"></div>
+			</section>
+		</div>
+	</header>
+	<!-- header section ends -->
+
 	<main>
-		<!-- header section -->
-		<header class="header">
-			<div class="nav-bg">
-				<section class="flex">
-					<a href="#home" class="logo"><img src="images/Ten2One_navbar_resize.png"></a>
-
-					<nav class="navbar">
-						<a href="#home">Home</a>
-						<a href="#about">About</a>
-						<a href="#gallery">Gallery</a>
-						<a href="#team">Team</a>
-						<a href="#contact">Contact</a>
-					</nav>
-
-					<div id="menu-btn" class="fas fa-bars"></div>
-				</section>
-			</div>
-		</header>
-		<!-- header section ends -->
-
 		<!-- home section -->
 		<div class="home-bg">
 			<section class="home" id="home">
@@ -344,7 +344,7 @@
 		</div>
 		<!-- footer section ends -->
 
-		<!-- custom js file -->
+		<!-- custom js files -->
 		<script src="js/script.js"></script>
 		<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 		<script>
